# openrouter-discord-bot

./: .gitignore  LICENSE  README.md  bot.py  pyproject.toml
docs/: ARCHITECTURE.md  TECH_DEBT.md
src/: bot.py
src/core/discord/: guards.py
src/core/integrations/: openrouter.py
src/core/types/: llm.py
